--- a/index.html
+++ b/index.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 
-<title> Check for update:</title>
+<title> MhC</title>
 
-<head> 
+<head>
 
-<link rel="stylesheet" href="design.css">
-<link rel="script" href="javascript.js">
+    <link rel="stylesheet" href="design.css">
+    <link rel="script" href="javascript.js">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dosis|Hind|Open+Sans|Quicksand" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-<link href="https://fonts.googleapis.com/css?family=Dosis|Hind|Open+Sans|Quicksand" rel="stylesheet">
-
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script>
-
-<!-- Nav Bar -->
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places&language=en"></script>
+    <!-- Nav Bar -->
 <div class="topnav" id="myTopNav">
-  <a href="#home">Home</a>
-  <a href="#map">Map</a>
+    <a href="#home">Home</a>
+    <a href="#map">Map</a>
 </div>
 
 </head>
@@ -24,24 +21,28 @@
 <body>
 
 
- <!-- Home tab - search bar -->
-<div id = "home" class="active">
-	
-	<div class = "HeaderTitle"> 
-		<center> Find a Mental Health Clinic </center>
-		<center> <p> Providing users with easy access to mental health 
-			clinics around around them </p> </center>
-	</div>
-	<div class = "searchBox">	
-		<input type="text" name="search" placeholder="Enter a location ...">
-	</div>
-</div>
+    <!-- Home tab - search bar -->
+    <div id = "home" class="active">
 
-<div id = "Map">
+        <div class = "HeaderTitle">
+            <center> Find a Mental Health Clinic </center>
+            <center> <p> Providing users with easy access to mental health
+                    clinics around around them </p> </center>
+        </div>
+        <div class = "searchBox">
+            <input type="text" placeholder="Enter a location ..." id="autocomplete">
+        </div>
+    </div>
 
-	<div id="map">My map will go here</div>
+    <div id = "Map">
 
-</div>
+        <div id="map">My map will go here</div>
+
+    </div>
+    <script>
+        var input = document.getElementById('autocomplete');
+        var autocomplete = new google.maps.places.Autocomplete(input);
+    </script>
 
 </body>
 
