--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Nav Bar -->
 <div class="topnav" id="myTopNav">
     <a href="#home">Home</a>
-    <a href="#map">Map</a>
+    <a href="#tips">Tips</a>
     <div id='content'></div>
 </div>
 
