--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAat9gGlp6aCc-qZKFIIAATaX9M_lkM_b0&libraries=places&language=en&callback
-    =locate">async defer</script>
+    =initialize">async defer</script>
     <!-- Nav Bar -->
 <div class="topnav" id="myTopNav">
     <a href="#home">Home</a>
@@ -48,6 +48,8 @@
         var input = document.getElementById('autocomplete');
         var autocomplete = new google.maps.places.Autocomplete(input);
         var markers = [];
+        var places = [];
+        var infowindow;
 
         var map = new google.maps.Map(document.getElementById('map'), {
              zoom: 15,
@@ -61,22 +63,23 @@
           var geocoder = new google.maps.Geocoder();
 
            var address = document.getElementById('autocomplete').value;
-          
+           var tempLocation = 0;
            geocoder.geocode({'address': address}, function(results, status) {
              if (status === 'OK') {
 
               map.setCenter(results[0].geometry.location);
+              tempLocation = results[0].geometry.location;
               var marker = new google.maps.Marker({
                 map: map,
                 position: results[0].geometry.location
               });
               
-              /*var information = "place information";
-              var div = document.createElement("div");
-              //div.createTextNode(information);*/
-              marker.addListener('click', function() {
-                //document.getElementbyId('content').appendChild(div);
-              });
+              var service = new google.maps.places.PlacesService(map);
+                service.nearbySearch({
+                    location : tempLocation,
+                    radius : 5500,
+                    type : [ 'doctor' ]
+                }, callback);
             } else {
               alert('Geocode was not successful for the following reason: ' + status);
             }
@@ -86,6 +89,34 @@
         function fail(){
             alert('navigator.geolocation failed, may not be supported');
         }
+
+        infowindow = new google.maps.InfoWindow();
+        function callback(results, status) {
+        if (status === google.maps.places.PlacesServiceStatus.OK) {
+          for (var i = 0; i < results.length; i++) {
+            createMarker(results[i]);
+          }
+        }
+
+        function createMarker(place) {
+            var placeLoc = place.geometry.location;
+            var marker = new google.maps.Marker({
+                map: map,
+                position: place.geometry.location
+            });
+            places.push(place.name);
+            google.maps.event.addListener(marker, 'click', function() {
+                infowindow.setContent(place.name);
+                infowindow.open(map, this);
+            });
+        }
+
+        for(var i = 0; i < places.length; ++i){
+            var div = document.createElement('div');
+            div.innerHTML = places[i];
+            document.getElementById('content').appendChild(div);
+        }
+      }
 
 
     </script>
